# example-mcu-stm32

./: Cargo.toml  openocd.cfg
.cargo/: config
src/: main.rs
src/common/: logger.rs  mod.rs
src/serial/: mod.rs
